--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background: url('https://source.unsplash.com/featured/?spa') no-repeat center center fixed;
-  background-size: cover;
+  background: rgba(80,179,162, 0.55);
+  /*background: url('https://source.unsplash.com/featured/?spa') no-repeat center center fixed;*/
+  /*background-size: cover;*/
 }
 
 header {
@@ -52,7 +53,7 @@ a {
   text-decoration: none;
 }
 
-main {
+#main {
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.9);
 }
@@ -66,16 +67,6 @@ main {
   justify-content: center;
   margin-bottom: 10px;
 }
-
-#locationInput,
-#lengthInput,
-#dateInput {
-  padding: 12px;
-  border-radius: 5px;
-  width: 32%;
-  margin: 0;
-}
-
 button {
   display: block;
   padding: 12px;
@@ -101,7 +92,6 @@ footer {
   color: white;
 }
 .Bottombar{
-  position: fixed;
   bottom: 0;
   width: 100%;
 }
@@ -109,4 +99,79 @@ footer {
 #logo{
   padding-left: 10px;
   text-align: center;
+}
+
+.searchInput{
+  grid-template-rows: 5px 5px;
+  width: 110px;
+  margin-left: 10px;
+}
+
+#home{
+  height: 100px;
+  text-align: center;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+#input{
+  width: 114.33px;
+  height: 21.33px;
+}
+
+#searchButton{
+  width: 150px;
+  margin: 0 auto;
+}
+.informationHolder{
+  column-count: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#helper{
+  column-count: 2;
+  margin: 5px auto;
+  border: red dotted;
+}
+
+#helperbox{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  border: 1px dotted;
+}
+
+#infoBox{
+  height: 300px;
+  margin: 10px auto;
+  column-count: 2;
+  overflow: hidden;
+}
+
+
+.LeftBox{
+  overflow: hidden;
+  width: inherit;
+  height: inherit;
+  justify-content: right;
+  align-items: center;
+  display: flex;
+  text-align: center;
+}
+
+.RightBox{
+  overflow: hidden;
+  width: inherit;
+  height: inherit;
+  justify-content: left;
+  align-items: center;
+  display: flex;
+}
+
+.infoImage{
+  width: inherit;
+  height: inherit;
 }
